syntax = "proto3";
option go_package = "github.com/apavlidi/go-grpc/proto";

service BlogService {
  rpc ListBlogs(ListBlogRequest) returns (ListBlogResponse);
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);
  rpc GetBlog(GetBlogRequest) returns (GetBlogResponse);
}

message ListBlogRequest{
}

message ListBlogResponse{
  repeated Blog blogs = 1;
}

message Blog {
  int32 id = 1;
  string title = 2;
  string text = 3;
  string author = 4;
  string date = 5;
}

message CreateBlogRequest {
  string title = 1;
  string text = 2;
  string author = 3;
}

message CreateBlogResponse {
  int32 id = 1;
}

message DeleteBlogRequest {
  int32 id = 1;
}

message DeleteBlogResponse{
}

message UpdateBlogRequest{
  int32 id = 1;
  string title = 2;
  string text = 3;
  string author = 4;
}

message UpdateBlogResponse{
}

message GetBlogRequest{
  int32 id = 1;
}

message GetBlogResponse{
  Blog blog = 1;
}